# google-lifetime-value

./: .gitignore  README.md  config.yml  download_transactions.sh  logger.py  makefile  preprocess.py  pyproject.toml  requirements.txt
notebooks/: exploratory.ipynb  feature_engineering.ipynb  preprocess_data.ipynb  preprocessing.ipynb
src/google_lifetime_value/preprocess/: __init__.py  preprocess_transactions.py
src/google_lifetime_value/utils/: __init__.py  config_utils.py
