[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "google_lifetime_value"
version = "0.1.0"
description = "LTV Prediction with Deep Probabilistic Model"
authors = [{ name = "Batuhan Sarıtaş", email = "batuhansrts09@example.com" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
